--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,19 @@ h2 {
   font-family: "Fira Sans", sans-serif;
   font-size: 2.3rem;
 }
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.spinner {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #3498db;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  display: inline-block;
+  margin-left: 10px;
+}
